Changelog
=========

8.8-dev - (unreleased)
----------------------

8.7 - (2015-01-22)
------------------
* Bug fix: Fixed dataset_view within Chameleon
  [voineali refs #22307]
* Change: removed map view location calls from eea.dataservice now that acgis
  map is no longer available within eea.geotags
  [ichimdav]

8.6 - (2014-11-20)
------------------
* Feature: Added possibility to suppress sending emails on workflow change
  [voineali refs #21851]
* Bug fix: Removed hard-coded review_state=published while listing data tables
  [voineali refs #21515]
* Bug fix: fixed CSS and wording for "Dynamic geotags Coverage"
  [ghicaale refs #21458]
* Change: updated eea.geotags field labels
  [ghicaale refs #21458]

8.5 - (2014-09-15)
------------------
* Feature: added doctest for the workflow change event where EEAFigureFile
  objects get the same EffectiveDate from their parent EEAFigures
  [ichimdav refs #20827]

8.4 - (2014-06-06)
------------------
* Bug fix: Fix Eps to PNG converter
  [voineali refs #19830]

8.3 - (2014-05-13)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
    - RUN with www8 as a LAST step since it reindexes 7000 objects
    - [ichimdav #19367]
* Change: Data and EEAFigure now have an indexer that indexes the values of the
  location field if the value is part of the european countries vocabulary
  [ichimdav refs #19367]

8.2 - (2014-02-03)
------------------
* Bug fix: cleaned references of tooltip macro being loaded from dataset_view
  [ichimdav refs #18197]

8.1 - (2014-01-22)
------------------
* Bug fix: reference geotags macros from eea.forms instead of
  eea.dataservice
  [ichimdav refs #16719]
* Bug fix: reference temporal-coverage macros from eea.forms instead of
  eea.dataservice
  [ichimdav refs #16719]
* Change: removed version pin of eea.themecentre from the plone4 buildout
  [ichimdav]